# python-boilerplate

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
tests/: test_python_boilerplate.py
